--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,39 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+
+  /*PRIMARY*/
+  --limeGreen: hsl(163, 72%, 41%);
+  --brightRed: hsl(356, 69%, 56%);
+
+  --facebook: hsl(208, 92%, 53%);
+  --twitter: hsl(203, 89%, 53%);
+  --instagram: linear gradient hsl(37, 97%, 70%) to hsl(329, 70%, 58%);
+  --youtube: hsl(348, 97%, 39%);
+
+  /*DARK THEME*/
+  --darkToggle: linear-gradient (120deg, hsl(210, 78%, 56%), hsl(146, 68%, 55%));
+
+  --veryDarkBlueTopBG: hsl(232, 19%, 15%); /*Top BG pattern*/
+  --darkDesaturatedBlue: hsl(228, 28%, 20%); /*Card BG*/
+  --desaturatedBlue: hsl(228, 34%, 66%); /*blue-text*/
+
+  /*LIGHT THEME*/
+  --lightToggle: hsl(230, 22%, 74%);
+
+  --white: hsl(0, 0%, 100%);
+  --veryPaleBlue: hsl(225, 100%, 98%); /*Top BG pattern*/
+  --lightGrayishBlue: hsl(227, 47%, 96%); /*card BG*/
+  --darkGrayishBlue: hsl(228, 12%, 44%); /*gray-blue-text */
+  --veryDarkBlue: hsl(230, 17%, 14%); /*blue-dark-text */
+}
+
+html,
+body {
+  margin: 0;
+  width: 100%;
+}
