--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,11 @@
 
   --facebook: hsl(208, 92%, 53%);
   --twitter: hsl(203, 89%, 53%);
-  --instagram: linear gradient hsl(37, 97%, 70%) to hsl(329, 70%, 58%);
+  --instagram: linear-gradient(90deg, hsl(37, 97%, 70%), hsl(329, 70%, 58%));
   --youtube: hsl(348, 97%, 39%);
 
   /*DARK THEME*/
-  --darkToggle: linear-gradient (120deg, hsl(210, 78%, 56%), hsl(146, 68%, 55%));
+  --darkToggle: linear-gradient (90deg, hsl(210, 78%, 56%), hsl(146, 68%, 55%));
 
   --veryDarkBlueTopBG: hsl(232, 19%, 15%); /*Top BG pattern*/
   --darkDesaturatedBlue: hsl(228, 28%, 20%); /*Card BG*/
