--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -6,25 +6,18 @@
   background: var(--lightToggle);
 }
 
-.bg-dark-toggle {
-  background: var(--darkToggle);
+.light-toggle-text {
+  color: var(--lightToggle);
 }
 
-.toggle {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
+.bg-dark-toggle {
+  background: var(--darkToggle);
 }
 
 .label {
   @apply bg-light-toggle;
   position: relative;
-  display: flex;
-  align-items: center;
   border-radius: 50px;
-
-  margin: 0 20px;
   width: 50px;
   height: 24px;
   cursor: pointer;
@@ -34,7 +27,7 @@
   background: var(--white);
   position: absolute;
   top: 2.2px;
-  left: 3px;
+  left: 28px;
   border-radius: 50px;
   width: 19px;
   height: 19px;
@@ -42,7 +35,7 @@
 }
 
 .checkbox:checked + .label .ball {
-  transform: translateX(25px);
+  transform: translateX(-25px);
 }
 
 .checkbox:checked + .label {
